[package]
name = "k0hax-rust-aprs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libk0hax_aprs"
path = "src/lib.rs"

[[bin]]
name = "k0hax-aprs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
aprs-parser = "0.4.2"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
log = "0.4.21"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
stderrlog = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
opt-level = 3
codegen-units = 1
debug = 2

